# ROSWorkspace

./: README.md
eRob_moveit/src/eRob_ROS2_MoveIt/: moveit_test.rviz
eRob_moveit/src/eRob_ROS2_MoveIt/pl25488/: .setup_assistant  CMakeLists.txt  package.xml
eRob_moveit/src/eRob_ROS2_MoveIt/pl25488/config/: eRobo3.ros2_control.xacro  eRobo3.urdf.xacro  gui_bridge_params.yaml  move_group.yaml  moveit_controllers.yaml  ros2_controllers.yaml  zeroErr.yaml  zeroErr1.yaml
eRob_moveit/src/eRob_ROS2_MoveIt/pl25488/launch/: demo.launch.py  move_group.launch.py  spawn_controllers.launch.py  test.launch.py
eRob_moveit/src/eRob_ROS2_MoveIt/pl25488/scripts/: cartesian_gui.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/erob_arm/share/erob_arm/: package.sh
install/ethercat_driver/include/ethercat_driver/: ethercat_driver.hpp
install/ethercat_driver/share/ethercat_driver/: local_setup.sh  package.sh
install/ethercat_driver_ros2/share/ethercat_driver_ros2/: local_setup.sh  package.sh
install/ethercat_generic_cia402_drive/share/ethercat_generic_cia402_drive/: local_setup.sh  package.sh
install/ethercat_generic_slave/share/ethercat_generic_slave/: local_setup.sh  package.sh
install/ethercat_interface/include/ethercat_interface/: ec_master.hpp
install/ethercat_interface/share/ethercat_interface/: local_setup.sh  package.sh
install/ethercat_manager/lib/ethercat_manager/: ethercat_sdo_srv_server
install/ethercat_manager/share/ethercat_manager/: package.sh
install/ethercat_msgs/share/ethercat_msgs/: package.dsv  (+3 more)
log/: latest_build
(+55 files in other folders)
